@startuml c4-code

' ============================================================
' PART A: Class Diagram - AI Service Module
' ============================================================

title Code Diagrams - Digital Therapy Assistant AI Service Module

package "AI Service Module" {

    interface "AiService" as AiService {
        +generateResponse(sessionId: UUID, userMessage: String): ChatResponse
        +analyzeThought(automaticThought: String): List<DistortionSuggestion>
        +generateReframingPrompts(thought: String, distortionIds: List<String>): List<String>
        +detectCrisis(text: String): CrisisDetectionResultDto
        +generateInsights(userId: UUID): DiaryInsights
        +summarizeSession(sessionId: UUID): SessionSummary
    }

    class "AiServiceImpl" as AiServiceImpl {
        -chatClient: ChatClient
        -ragContextBuilder: RagContextBuilder
        -crisisDetector: CrisisDetector
        -sessionRepository: UserSessionRepository
        -chatMessageRepository: ChatMessageRepository
        -objectMapper: ObjectMapper
        +generateResponse(sessionId: UUID, userMessage: String): ChatResponse
        +analyzeThought(automaticThought: String): List<DistortionSuggestion>
        +generateReframingPrompts(thought: String, distortionIds: List<String>): List<String>
        +detectCrisis(text: String): CrisisDetectionResultDto
        +generateInsights(userId: UUID): DiaryInsights
        +summarizeSession(sessionId: UUID): SessionSummary
    }

    class "RagContextBuilder" as RagContextBuilder {
        -vectorStore: VectorStore
        -sessionRepository: UserSessionRepository
        -diaryRepository: DiaryEntryRepository
        -chatMessageRepository: ChatMessageRepository
        +buildContext(userId: UUID, sessionId: UUID, query: String): String
    }

    class "KnowledgeBaseLoader" as KnowledgeBaseLoader {
        -vectorStore: VectorStore
        -storePath: String
        +loadKnowledgeBase(): void
        -loadDistortions(mapper: ObjectMapper): int
        -loadCbtTechniques(mapper: ObjectMapper): int
        -loadCrisisProtocols(mapper: ObjectMapper): int
    }

    class "CrisisDetector" as CrisisDetector {
        -{static} CRISIS_KEYWORDS: Set<String>
        -chatClient: ChatClient
        -objectMapper: ObjectMapper
        +analyze(text: String): CrisisDetectionResultDto
        +detectKeywords(text: String): List<String>
        -analyzeWithAi(text: String): CrisisDetectionResultDto
        -combineResults(...): CrisisDetectionResultDto
    }

    interface "VectorStore" as VectorStore {
        +add(documents: List<Document>): void
        +similaritySearch(request: SearchRequest): List<Document>
    }

    class "SimpleVectorStore" as SimpleVectorStore {
        +add(documents: List<Document>): void
        +similaritySearch(request: SearchRequest): List<Document>
        +save(file: File): void
    }
}

package "DTOs" {
    class "ChatResponse" as ChatResponseDto {
        +sessionId: UUID
        +message: String
        +role: String
        +timestamp: LocalDateTime
        +crisisAssessment: CrisisDetectionResultDto
    }

    class "CrisisDetectionResultDto" as CrisisDto {
        +riskLevel: String
        +keywordsDetected: List<String>
        +recommendedAction: String
        +reasoning: String
    }

    class "DistortionSuggestion" as DistortionDto {
        +distortionId: String
        +confidence: double
        +reasoning: String
    }

    class "DiaryInsights" as InsightsDto {
        +totalEntries: long
        +averageMoodImprovement: double
        +topDistortions: List<TopDistortion>
        +patterns: List<String>
        +aiInsight: String
    }

    class "SessionSummary" as SummaryDto {
        +sessionId: UUID
        +title: String
        +startedAt: LocalDateTime
        +endedAt: LocalDateTime
        +status: SessionStatus
        +moodBefore: Integer
        +moodAfter: Integer
        +moodImprovement: Integer
        +aiSummary: String
    }
}

' Relationships
AiServiceImpl ..|> AiService : implements
SimpleVectorStore ..|> VectorStore : implements

AiServiceImpl --> RagContextBuilder : uses
AiServiceImpl --> CrisisDetector : uses
RagContextBuilder --> VectorStore : queries
KnowledgeBaseLoader --> VectorStore : populates

AiServiceImpl ..> ChatResponseDto : creates
AiServiceImpl ..> CrisisDto : creates
AiServiceImpl ..> DistortionDto : creates
AiServiceImpl ..> InsightsDto : creates
AiServiceImpl ..> SummaryDto : creates
CrisisDetector ..> CrisisDto : creates

@enduml


@startuml c4-code-sequence-chat

' ============================================================
' PART B: Sequence Diagram - Chat Message Flow
' ============================================================

title Sequence Diagram A - Chat Message Flow

actor User
participant "CLI Application" as CLI
participant "SessionController" as Controller
participant "SessionService" as SessionSvc
participant "AiService" as AiSvc
participant "CrisisDetector" as Crisis
participant "RagContextBuilder" as RAG
participant "VectorStore" as VS
participant "ChatClient\n(LLM)" as LLM
database "H2 Database" as DB

User -> CLI : Enter chat message
CLI -> Controller : POST /sessions/{id}/chat\n{message: "..."}
Controller -> SessionSvc : chat(sessionId, message)

' Save user message
SessionSvc -> DB : Save ChatMessage (USER)

' AI processing
SessionSvc -> AiSvc : generateResponse(sessionId, message)

' Crisis check first
AiSvc -> Crisis : analyze(message)
Crisis -> Crisis : detectKeywords(message)
Crisis -> LLM : Crisis detection prompt
LLM --> Crisis : JSON risk assessment
Crisis --> AiSvc : CrisisDetectionResultDto

' Build RAG context
AiSvc -> RAG : buildContext(userId, sessionId, message)
RAG -> VS : similaritySearch(message)
VS --> RAG : Relevant CBT documents
RAG -> DB : Get session history
DB --> RAG : UserSession records
RAG -> DB : Get diary patterns
DB --> RAG : DiaryEntry records
RAG -> DB : Get session transcript
DB --> RAG : ChatMessage records
RAG --> AiSvc : Assembled context string

' Generate therapeutic response
AiSvc -> LLM : System prompt + context + user message
LLM --> AiSvc : AI therapeutic response

AiSvc --> SessionSvc : ChatResponse

' Save assistant message
SessionSvc -> DB : Save ChatMessage (ASSISTANT)

SessionSvc --> Controller : ChatResponse
Controller --> CLI : JSON response
CLI --> User : Display AI response\n(+ crisis info if applicable)

@enduml


@startuml c4-code-sequence-diary

' ============================================================
' PART C: Sequence Diagram - Diary Entry with AI Analysis
' ============================================================

title Sequence Diagram B - Diary Entry with AI Analysis

actor User
participant "CLI Application" as CLI
participant "DiaryController" as Controller
participant "DiaryService" as DiarySvc
participant "AiService" as AiSvc
participant "ChatClient\n(LLM)" as LLM
database "H2 Database" as DB

User -> CLI : Create diary entry\n(situation, thought, emotions)
CLI -> Controller : POST /diary/entries\n{situation, automaticThought, emotions, moodBefore}
Controller -> DiarySvc : createEntry(userId, request)
DiarySvc -> DB : Load User by ID
DB --> DiarySvc : User entity
DiarySvc -> DB : Load CognitiveDistortions by IDs
DB --> DiarySvc : Distortion entities
DiarySvc -> DB : Save DiaryEntry
DB --> DiarySvc : Saved entry with ID
DiarySvc --> Controller : DiaryEntryResponse
Controller --> CLI : JSON response (201 Created)
CLI --> User : Entry saved confirmation

' User requests distortion analysis
User -> CLI : Request distortion suggestions
CLI -> Controller : POST /diary/distortions/suggest\n{thought: "automaticThought"}
Controller -> DiarySvc : suggestDistortions(thought)

DiarySvc -> DiarySvc : Keyword pattern matching\n(always, never, disaster, etc.)
DiarySvc -> DB : Lookup matched CognitiveDistortion IDs
DB --> DiarySvc : Distortion entities

DiarySvc --> Controller : List<DistortionSuggestion>
Controller --> CLI : JSON distortion suggestions
CLI --> User : Display identified distortions\nwith confidence scores

' User requests insights
User -> CLI : View diary insights
CLI -> Controller : GET /diary/insights
Controller -> DiarySvc : getInsights(userId)
DiarySvc -> DB : Count entries, calculate avg mood improvement
DB --> DiarySvc : Aggregated stats
DiarySvc --> Controller : DiaryInsights
Controller --> CLI : JSON insights response
CLI --> User : Display patterns and mood trends

@enduml
